# exovista

./: .gitignore  README.md  clean.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: example_2d_quads.py  example_mixed_elements.py  example_multi_block.py  example_read_exo.py  example_read_field_history.py  example_side_sets.py  example_time_fields.py  save_exo.py
exovista/: __init__.py  _put_solution.py  config.py  copy.py  element.py  file.py  find_in_region.py  nc.py  parallel_file.py  read_pyvista.py  similar.py  write_pyvista.py
test/: conftest.py  parallel_write.py  serial_read.py  test_2d_save.py  test_audit_fixes.py  test_cli.py  test_connectivity.py  test_element.py  test_parallel_join.py  test_read_exo.py  test_similar.py  test_time_fields.py  test_write_exo.py
