[project]
name = "exovista"
version = "1.1.1"
description = "Python wrappers to the ExodusII finite element database model"
dependencies = ["netcdf4", "pyvista", "numpy", "scipy"]

[project.scripts]
"exoread.py" = "exovista:exoread"

[build-system]
requires = ["setuptools>=64", "setuptools-scm[toml]>=6.2.3"]
build-backend = "setuptools.build_meta"
