[project]
name = "exovista"
version = "1.3.0"
description = "Export and import PyVista meshes to and from the ExodusII finite element database format"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Interfluo" }]
keywords = ["exodus", "exodusii", "pyvista", "vtk", "finite-element", "mesh"]
dependencies = ["netcdf4", "pyvista", "numpy", "scipy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/Interfluo/exovista"
Repository = "https://github.com/Interfluo/exovista"

[project.optional-dependencies]
dev = ["pytest", "flake8"]

[project.scripts]
"exoread.py" = "exovista:exoread"

[tool.setuptools]
packages = ["exovista"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
